# atelier-studio

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  code_test.py  components.json  doctor.config.json  figures_data.json  figures_index.html  package-lock.json  package.json  test_auto_review.py  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/: launch.json
.fig_thumbs/: annot_kit.js  cmux-gallery-19175.json  cmux-gallery-9175.json  code_editor.html  gallery_template.html  latex_studio.html  md_studio.html  md_viewer.html  pdf_annots.json  pdf_annots.json.bak  pdf_viewer.html  sel_overlay.js  studio_pill.js  svg_viewer.html
design/: icon-options.html
docs/: AGENT_HARNESS_CONTRACT.md  BRIEF_CODEX_SPRINT1.md  BRIEF_CUSTOM_SELECT.md  BRIEF_GALLERY_NODE_PORT.md  BRIEF_GALLERY_PORT_P3P4.md  BRIEF_PROVIDER_REGISTRY.md  BRIEF_SIDEBAR_RECENCY.md  BRIEF_UI_POLISH.md  DIAGNOSTIC_RUST_BACKEND.md  HANDOFF_fleches_plein_ecran.md  PIEGES_CONNUS.md  PROTOCOLE_RELANCE.md  ROADMAP_V1.md  SECURITY.md  SOAK_033_RUST_BACKEND.md  distribution-decision.md
gallery/: .gitignore  AGENTS.md  LICENSE  README.md  build_gallery.py  cmux.example.json  cmux_gallery.py  fig_annotate_server.py  figures_data.json  install.sh  package-lock.json  package.json  playwright.config.js  reapply_svg_edits.py  tsconfig.json  zotero_to_gallery.py
mobile/: README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: lib.rs  main.rs
plans/: 001-quickask-session-isolation.md  002-turn-lifecycle-hardening.md  003-history-reload-fidelity.md  004-reproducible-repository.md  005-gallery-origin-security.md  006-durable-safe-git-snapshots.md  007-restore-figure-workflow.md  008-verification-and-ci.md  009-runtime-lifecycle-reliability.md  010-history-and-usage-fidelity.md  011-characterize-and-split-frontend.md  012-frontend-load-performance.md  013-shareable-macos-distribution.md  014-ui-product-blueprint.md  015-frontend-characterization-and-ui-architecture.md  016-ui-tokens-and-primitives.md  017-research-home.md  018-workspace-hierarchy-and-context.md  019-execution-notes.md  019-gallery-toolbar-and-scientific-inspector.md  020-chat-turns-and-composer.md  021-settings-accessibility-responsive-and-visual-qa.md  022-frontend-load-performance-v2.md  023-high-end-cosmetic-polish.md  024-active-project-research-navigator.md  025-agent-harness-parity.md  025-editeur-composition-figures.md  025-execution-notes.md  026-lock-diff-product-contract.md  027-explicit-diff-interventions.md  028-diff-restore-and-durability.md  029-nonblocking-diff-rendering.md  030-reproducible-cm6-diff-parity.md  031-execution-notes.md  031-migrate-all-editors-to-cm6.md  032-remove-cm5-after-soak.md  033-atelier-rust-backend-functional-parity.md  033-parity-matrix.md  034-ios-companion-chat-native-fluidity.md  035-shadcn-ui-complete-migration.md  (+29 more)
rust/: Cargo.toml  README.md
rust/crates/atelier-agent-mcp/: Cargo.toml
rust/crates/atelier-agent-mcp/src/: bridge.rs  main.rs  schema.rs  server.rs
rust/crates/atelier-core/: Cargo.toml
rust/crates/atelier-core/src/: gallery_builder.rs  lib.rs  svg_edits.rs
rust/crates/atelier-gallery/: Cargo.toml
rust/crates/atelier-gallery/src/: agent.rs  documents.rs  files.rs  gallery.rs  git.rs  host.rs  main.rs  suggest.rs  workspace.rs  zotero.rs
rust/crates/atelier-gallery/tests/: http_smoke.rs
rust/crates/atelier-harness/: Cargo.toml
rust/crates/atelier-harness/src/: kinds.rs  lib.rs  thread.rs
rust/crates/atelier-protocol/: Cargo.toml
rust/crates/atelier-protocol/src/: agent_link.rs  lib.rs  remote.rs
rust/crates/atelier-providers/: Cargo.toml
rust/crates/atelier-providers/src/: acp_map.rs  acp_rpc.rs  api.rs  claude.rs  claude_parse.rs  codex.rs  codex_parse.rs  codex_rpc.rs  fake.rs  grok.rs  grok_parse.rs  images.rs  kimi.rs  kimi_map.rs  lib.rs  opencode.rs  opencode_parse.rs  registry.rs  traits.rs
rust/crates/atelier-providers/tests/fixtures/: fake_kimi_acp.mjs
rust/crates/atelier-remote/: Cargo.toml
rust/crates/atelier-remote/src/: auth.rs  error.rs  hostcheck.rs  lib.rs  main.rs  path_policy.rs  rate_limit.rs  routes.rs  scopes.rs  state.rs
rust/crates/atelier-remote/tests/: security.rs
rust/crates/atelier-runtime/: Cargo.toml
rust/crates/atelier-runtime/src/: agent_links.rs  agent_mailbox.rs  agent_mcp.rs  atomic.rs  automations.rs  codex_history.rs  grok_history.rs  instance.rs  kb_block.rs  lib.rs  parity.rs  paths.rs  send.rs  server.rs  state.rs  ws_router.rs
rust/crates/atelier-server/: Cargo.toml
rust/crates/atelier-server/src/: main.rs
rust/crates/atelier-store/: Cargo.toml
rust/crates/atelier-store/src/: agent_mailbox.rs  automations.rs  context_projection.rs  highlights.rs  journal.rs  ledger.rs  lib.rs  settings.rs  threads.rs
rust/crates/atelier-workspace/: Cargo.toml
rust/crates/atelier-workspace/src/: catalog.rs  git.rs  lib.rs  narval.rs  pasted.rs  scan.rs  term.rs  zotero.rs
scripts/: build-tauri-app.sh  build-tauri-dmg.sh  capture_chatbench.cjs  capture_navbench.cjs  check-backend-policy.mjs  check-boot-soak.mjs  check-mobile-secrets.mjs  (+13 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.release.conf.json
src-tauri/appsnap/: AppSnapHelper.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mobile-dist/: index.html  manifest.webmanifest
src-tauri/mobile-dist/assets/: index-B057cxl9.css  index-C4BdpJMU.js  index-CTZsTfgY.css  index-CTy4TSBW.js  index-DC_D2jkh.js  index-DG2edUZn.js  index-DprizjP_.css  pdf-C3fawhuY.js
src-tauri/rust-server-dist/: README.md  atelier-gallery-tool  atelier-kb  atelier-remote-gateway  gallery_tool_cli.mjs  knowledge.mjs
src-tauri/src/: appsnap.rs  atelier.rs  bin_resolver.rs  boot_metrics.rs  browser.rs  identity.rs  lib.rs  local_image.rs  macos_badge_permission.rs  remote_gateway.rs  sidecar.rs  ui_state.rs
(+760 files in other folders)
