[workspace]
resolver = "2"
members = [
  "crates/atelier-protocol",
  "crates/atelier-runtime",
  "crates/atelier-server",
  "crates/atelier-store",
  "crates/atelier-workspace",
  "crates/atelier-harness",
  "crates/atelier-providers",
  "crates/atelier-core",
  "crates/atelier-gallery",
  "crates/atelier-remote",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Atelier Studio"]

[workspace.dependencies]
atelier-protocol = { path = "crates/atelier-protocol" }
atelier-runtime = { path = "crates/atelier-runtime" }
atelier-store = { path = "crates/atelier-store" }
atelier-remote = { path = "crates/atelier-remote" }
atelier-workspace = { path = "crates/atelier-workspace" }
atelier-harness = { path = "crates/atelier-harness" }
atelier-providers = { path = "crates/atelier-providers" }
axum = { version = "0.8", features = ["ws", "macros"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
tempfile = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
