[package]
name = "atelier-agent-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "stdio MCP shim for linked-agent sessions (plan 057)"

[[bin]]
name = "atelier-agent-mcp"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
