[package]
name = "atelier-gallery"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Gallery HTTP server for Atelier Studio (plan 033 Porte 2)"
default-run = "atelier-gallery-server"

[[bin]]
name = "atelier-gallery-server"
path = "src/main.rs"

[dependencies]
atelier-core = { path = "../atelier-core" }
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
notify = "8"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
mime_guess = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
md-5 = "0.11"
hex = "0.4"
zip = { version = "2", features = ["deflate"] }
flate2 = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full", "test-util"] }
