[package]
name = "atelier-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider engine + registry (plan 033 Portes 5–8)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
atelier-harness = { path = "../atelier-harness" }
atelier-protocol = { workspace = true }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
atelier-store = { workspace = true }
