[package]
name = "atelier-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secure remote gateway for Atelier mobile companion (plan 034 C)"
default-run = "atelier-remote-gateway"

[[bin]]
name = "atelier-remote-gateway"
path = "src/main.rs"

[dependencies]
atelier-protocol = { workspace = true }
atelier-store = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
http-body-util = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { workspace = true }
