[package]
name = "atelier-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WS server runtime: auth, lock, health, lifecycle"

[dependencies]
atelier-protocol = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
