[package]
name = "atelier-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Files, Git, terminal PTY, Zotero, local scan (plan 033 Porte 4)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
tokio = { workspace = true }
uuid = { version = "1", features = ["v4"] }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
